# chatbot-cv

./: .gitignore  Makefile
.github/workflows/: ci.yml
apps/backend/: .coverage  config.py  main.py  pyproject.toml
apps/backend/db/: qdrant_helper.py
apps/backend/helpers/: data_helper.py  model_helper.py
apps/backend/models/: model_helper.py
apps/backend/tests/: test_main.py
apps/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
data/: CV.txt
