[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["moellerai <mads.moeller@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = {extras = ["test"], version = "^0.101.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"
black = "^23.7.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
